# glance-app

./: .gitignore  README.md  index.html  package.json  settings.html  vite.config.js
.github/workflows/: release.yml
src/: App.vue  SettingsApp.vue  main.js  main_settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  config.rs  doubao.rs  lib.rs  main.rs  mimo_tts.rs  mouse_hook.rs  selection.rs  shortcut.rs  translate.rs  tray.rs  tts.rs
src/assets/styles/: base.css  variables.css
src/components/: LangSelector.vue
src/shared/: api.js  composables.js  create_app.js  i18n.js
src/utils/: message.js
