[package]
name = "glance"
version = "0.1.0"
description = "AI 划词翻译助手"
authors = ["you"]
edition = "2021"

[lib]
name = "glance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
get-selected-text = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
http = "1"
base64 = "0.22"
rand = "0.8"
tauri-plugin-fs = "2"

