[package]
name = "glance"
version = "0.2.0"
description = "AI 划词翻译助手"
authors = ["you"]
edition = "2021"

[lib]
name = "glance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
get-selected-text = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
http = "1"
base64 = "0.22"
rand = "0.8"

[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

